--- a/Paper.tex
+++ b/Paper.tex
@@ -11,19 +11,19 @@
 
 %% Choose the appropriate event.
 \setevent{webmedia}
-\proceedingsDetails[WebMedia’2024]{Proceedings of the Brazilian Symposium on Multimedia and the Web}{2024}{Juiz de Fora, Brazil} 
+\proceedingsDetails[WebMedia’2024]{Proceedings of the Brazilian Symposium on Multimedia and the Web}{2024}{Juiz de Fora, Brazil}
 \ISSN{XXXX-XXXX}
 
 %\setevent{ctd}
-%\proceedingsDetails[CTD’2024]{VI Concurso de Teses e Disserta{\c c}{\~o}es (CTD 2024). Anais Estendidos do XXX Simpósio Brasileiro de Sistemas Multimídia e Web}{2024}{Juiz de Fora/MG, Brazil} 
+%\proceedingsDetails[CTD’2024]{VI Concurso de Teses e Disserta{\c c}{\~o}es (CTD 2024). Anais Estendidos do XXX Simpósio Brasileiro de Sistemas Multimídia e Web}{2024}{Juiz de Fora/MG, Brazil}
 %\ISSN{2596-1683}
 
 %\setevent{ctic}
-%\proceedingsDetails[CTIC’2024]{IV Concurso de Trabalhos de Inicia{\c c}{\~a}o Cient{\'i}fica (CTIC 2024). Anais Estendidos do XXX Simpósio Brasileiro de Sistemas Multimídia e Web}{2024}{Juiz de Fora/MG, Brazil} 
+%\proceedingsDetails[CTIC’2024]{IV Concurso de Trabalhos de Inicia{\c c}{\~a}o Cient{\'i}fica (CTIC 2024). Anais Estendidos do XXX Simpósio Brasileiro de Sistemas Multimídia e Web}{2024}{Juiz de Fora/MG, Brazil}
 %\ISSN{2596-1683}
 
 %\setevent{wfa}
-%\proceedingsDetails[WFA’2024]{XXII Workshop de Ferramentas e Aplica{\c c}{\~o}es (WFA 2024) (CTIC 2024). Anais Estendidos do XXX Simpósio Brasileiro de Sistemas Multimídia e Web}{2024}{Juiz de Fora/MG, Brazil} 
+%\proceedingsDetails[WFA’2024]{XXII Workshop de Ferramentas e Aplica{\c c}{\~o}es (WFA 2024) (CTIC 2024). Anais Estendidos do XXX Simpósio Brasileiro de Sistemas Multimídia e Web}{2024}{Juiz de Fora/MG, Brazil}
 %\ISSN{2596-1683}
 
 %% end of the preamble, the start of the body of the document source.
@@ -32,42 +32,26 @@
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{Insert Your Title Here}
-\subtitle{Subtitle (optional)}
+\title{PAR Digital: Tecnologia em Prol do Ensino Inclusivo}
+
+% \subtitle{Subtitle (optional)}
 %%
 %% The "author" command and its associated commands are used to define
 %% the authors and their affiliations.
 %% Of note is the shared affiliation of the first two authors and the
 %% "authornote" and "authornotemark" commands
 %% used to denote shared contribution to the research.
-\author{Ben Trovato}
-%\authornote{Both authors contributed equally to this research.}
-\email{trovato@corporation.com}
-\author{G.K.M. Tobin}
-%\authornotemark[1]
-\email{webmaster@marysville-ohio.com}
-\affiliation{%
-  \institution{Institute for Clarity in Documentation}
-  \streetaddress{P.O. Box 1212}
-  \city{Dublin}
-  \state{Ohio}
-  \postcode{43017-6221}
-}
 
-\author{Lars Th{\o}rv{\"a}ld}
-\affiliation{%
-  \institution{The Th{\o}rv{\"a}ld Group}
-  \streetaddress{1 Th{\o}rv{\"a}ld Circle}
-  \city{Hekla}
-  \country{Iceland}}
-\email{larst@affiliation.org}
 
-\author{Valerie B\'eranger}
+\author{Daniele Cássia}
 \affiliation{%
-  \institution{Inria Paris-Rocquencourt}
-  \city{Rocquencourt}
-  \country{France}
-}
+  \institution{Departamento de Ciência de Computação}
+  \institution{Universidade Federal de Minas Gerais}
+  \city{Belo Horizonte}
+  \country{Brasil}}
+\email{danielecassia@ufmg.br}
+
+\vspace{1cm}
 
 %%
 %% By default, the full list of authors will be used in the page
@@ -75,90 +59,96 @@
 %% other information printed in the page headers. This command allows
 %% the author to define a more concise list
 %% of authors' names for this purpose.
-\renewcommand{\shortauthors}{Trovato et al.}
+% \renewcommand{\shortauthors}{Trovato et al.}
 
 %%
 %% The abstract is a short summary of the work to be presented in the
 %% article.
+
 \begin{abstract}
-  A clear and well-documented \LaTeX\ document is presented as a
-  paper formatted for publication in the proceedings of the WebMedia. Based on the ``acmart'' document class, this
-  paper presents and explains the formatting elements an author may use to prepare his paper.
+  Este artigo apresenta uma descrição dos objetivos e funcionalidades do
+  PAR Digital, demonstrando como o software pode transformar a prática
+  educacional inclusiva.
 \end{abstract}
 
 
 %%
 %% Keywords. The author(s) should pick words that accurately describe
 %% the work being presented. Separate the keywords with commas.
-\keywords{datasets, neural networks, gaze detection, text tagging}
+\keywords{software, tecnologia, educação, plano educacional individualizado, inclusão}
 
 %% A "teaser" image appears between the author and affiliation
 %% information and the body of the document, and typically spans the
 %% page.
-\begin{teaserfigure}
-  \includegraphics[width=\textwidth]{sampleteaser}
-  \caption{Seattle Mariners at Spring Training, 2010.}
-  \Description{Enjoying the baseball game from the third-base
-  seats. Ichiro Suzuki preparing to bat.}
-  \label{fig:teaser}
-\end{teaserfigure}
+% \begin{teaserfigure}
+%   \includegraphics[width=\textwidth]{sampleteaser}
+%   \caption{Seattle Mariners at Spring Training, 2010.}
+%   \Description{Enjoying the baseball game from the third-base
+%   seats. Ichiro Suzuki preparing to bat.}
+%   \label{fig:teaser}
+% \end{teaserfigure}
 
 %%
 %% This command processes the author and affiliation and title
 %% information and builds the first part of the formatted document.
 \maketitle
 
-\section{Introduction}
+\section{Introdução}
 
-If you are new to publishing with WebMedia, this document is a valuable
-guide to preparing your work for publication. If you
-have published with ACM before, this document provides insight and
-instruction into more recent changes to the paper template.
+O PAR Digital é uma ferramenta tecnológica desenvolvida com base em anos de estudo
+e pesquisa pela Faculdade de Educação da Universidade Federal de Minas Gerais, PAR
+significa Planejar, Aplicar, Rever, ações necessárias para que o ensino seja eficaz
+para os alunos com deficiência.
 
-The ``\verb|webmedia|'' document class must be used to prepare papers
-for any stage
-of publication, from review to final ``camera-ready'' copy, to the
-author's own version, with {\itshape very} few changes to the source.
+\section{Objetivo}
+O objetivo do PAR Digital é proporcionar uma ferramenta acessível e intuitiva 
+que facilite o preenchimento e a gestão do Plano Educacional Individualizado (PEI), 
+essencial para o desenvolvimento educacional dos alunos com deficiência. Desenvolvido
+ a partir de princípios do Desenho Universal de Aprendizagem (DUA) e de uma parceria 
+ com o Atendimento Educacional Especializado (AEE), o sistema visa integrar-se de 
+ maneira eficiente na rotina diária dos educadores, promovendo um ensino inclusivo 
+ e personalizado.
+% \url{https://www.acm.org/publications/proceedings-template}.
 
-\section{Template Overview}
-As noted in the introduction, the ``\verb|webmedia|'' document class must
-be used to prepare your
-double-blind initial submission of the paper.
+\section{Arquitetura}
 
-This document will explain the major features of the document
-class. For further information, the {\itshape \LaTeX\ User's Guide} is
-available from
-\url{https://www.acm.org/publications/proceedings-template}.
+A estrutura do projeto é organizada de maneira a facilitar a manutenção e a expansão 
+do mesmo.
 
-\subsection{Template Styles}
+As principais tecnologias utilizadas no projeto incluem React.js, uma biblioteca 
+JavaScript para construção de interfaces de usuário, escolhida por sua eficiência 
+na criação de componentes reutilizáveis e desempenho otimizado. O TypeScript é 
+usado para adicionar tipagem estática ao código JavaScript, aumentando a robustez 
+e facilitando a manutenção. O Redux é empregado para o gerenciamento de estado da 
+aplicação, ideal para aplicações de médio e grande porte que necessitam de um 
+controle mais sofisticado do estado. A biblioteca Material-UI é utilizada para 
+implementar o design system do Google Material Design, enquanto o Axios serve 
+como cliente HTTP para realizar requisições a APIs. Ferramentas como Jest e 
+React Testing Library são utilizadas para testes automatizados, garantindo a 
+qualidade e a funcionalidade do código.
 
-The primary parameter given to the ``\verb|webmedia|'' document class is
-the {\itshape template style} which corresponds to the kind of publication. This parameter is enclosed in square
-brackets and is a part of the {\verb|documentclass|} command:
-\begin{verbatim}
-  \documentclass[sigconf]{webmedia}
-\end{verbatim}
+O fluxo de dados na aplicação é gerenciado pelo Redux, que centraliza o estado da 
+aplicação em um único store. As ações são despachadas a partir dos componentes, 
+que são tratadas pelos `reducers` para atualizar o estado global. Essa abordagem 
+facilita a depuração e o desenvolvimento de novas funcionalidades, uma vez que o 
+estado da aplicação se torna previsível e controlado.
 
-WebMedia adopts the sigconf template style.
+A estilização da aplicação é feita utilizando CSS-in-JS com a biblioteca Material-UI,
+ permitindo uma aplicação consistente do design system através dos componentes. 
+ A utilização de temas facilita a customização e a manutenção do estilo visual da 
+ aplicação.
 
-\subsection{Template Parameters}
+Para a integração e entrega contínua (CI/CD), o projeto utiliza ferramentas como 
+o GitHub Actions, configurado para executar testes automatizados e builds a cada 
+commit, garantindo que a aplicação se mantenha estável e pronta para deployment. 
+O deploy é realizado em um servidor localizado na UFMG, permitindo uma escalabilidade
+ fácil e eficiente.
 
-In addition to specifying the {\itshape template style} to be used in
-formatting your work, you must use the {\itshape template parameter} \verb|anonymous,review| for the ``double-blind'' submission. For ``double-blind'' submission, please use the following string as the first command in the
-source file:
-\verb|\documentclass[sigconf,anonymous,review]{webmedia}|.
-
-\section{Modifications}
-
-Modifying the template --- including but not limited to: adjusting
-margins, typeface sizes, line spacing, paragraph and list definitions,
-and the use of the \verb|\vspace| command to manually adjust the
-vertical spacing between elements of your work --- is not allowed.
 
 {\bfseries Your document will be returned to you for revision if
   modifications are discovered.}
 
-\section{Typefaces}
+\section{Funcionalidades}
 
 The ``\verb|webmedia|'' document class requires the use of the
 ``Libertine'' typeface family. Your \TeX\ installation should include
@@ -166,7 +156,7 @@ this set of packages. Please do not substitute other typefaces. The
 ``\verb|lmodern|'' and ``\verb|ltimes|'' packages should not be used,
 as they will override the built-in typeface families.
 
-\section{Title Information}
+\section{Licença}
 
 The title of your work should use capital letters appropriately -
 \url{https://capitalizemytitle.com/} has useful rules for
@@ -180,6 +170,22 @@ command has a ``short title'' parameter:
 \begin{verbatim}
   \title[short title]{full title}
 \end{verbatim}
+
+\section{Perspectivas}
+
+The title of your work should use capital letters appropriately -
+\url{https://capitalizemytitle.com/} has useful rules for
+capitalization. Use the {\verb|title|} command to define the title of
+your work. If your work has a subtitle, define it with the
+{\verb|subtitle|} command.  Do not insert line breaks in your title.
+
+If your title is lengthy, you must define a short version to be used
+in the page headers, to prevent overlapping text. The \verb|title|
+command has a ``short title'' parameter:
+\begin{verbatim}
+  \title[short title]{full title}
+\end{verbatim}
+
 
 \section{Authors and Affiliations}
 
