--- a/Paper.tex
+++ b/Paper.tex
@@ -101,355 +101,192 @@ significa Planejar, Aplicar, Rever, ações necessárias para que o ensino seja 
 para os alunos com deficiência.
 
 \section{Objetivo}
-O objetivo do PAR Digital é proporcionar uma ferramenta acessível e intuitiva 
-que facilite o preenchimento e a gestão do Plano Educacional Individualizado (PEI), 
+O objetivo do PAR Digital é proporcionar uma ferramenta acessível e intuitiva
+que facilite o preenchimento e a gestão do Plano Educacional Individualizado (PEI),
 essencial para o desenvolvimento educacional dos alunos com deficiência. Desenvolvido
- a partir de princípios do Desenho Universal de Aprendizagem (DUA) e de uma parceria 
- com o Atendimento Educacional Especializado (AEE), o sistema visa integrar-se de 
- maneira eficiente na rotina diária dos educadores, promovendo um ensino inclusivo 
+ a partir de princípios do Desenho Universal de Aprendizagem (DUA) e de uma parceria
+ com o Atendimento Educacional Especializado (AEE), o sistema visa integrar-se de
+ maneira eficiente na rotina diária dos educadores, promovendo um ensino inclusivo
  e personalizado.
 % \url{https://www.acm.org/publications/proceedings-template}.
 
 \section{Arquitetura}
 
-A estrutura do projeto é organizada de maneira a facilitar a manutenção e a expansão 
-do mesmo.
+A estrutura do projeto é organizada de maneira a facilitar 
+a manutenção e a expansão do mesmo.
 
-As principais tecnologias utilizadas no projeto incluem React.js, uma biblioteca 
-JavaScript para construção de interfaces de usuário, escolhida por sua eficiência 
-na criação de componentes reutilizáveis e desempenho otimizado. O TypeScript é 
-usado para adicionar tipagem estática ao código JavaScript, aumentando a robustez 
-e facilitando a manutenção. O Redux é empregado para o gerenciamento de estado da 
-aplicação, ideal para aplicações de médio e grande porte que necessitam de um 
-controle mais sofisticado do estado. A biblioteca Material-UI é utilizada para 
-implementar o design system do Google Material Design, enquanto o Axios serve 
-como cliente HTTP para realizar requisições a APIs. Ferramentas como Jest e 
-React Testing Library são utilizadas para testes automatizados, garantindo a 
+As principais tecnologias utilizadas no projeto incluem React.js, uma biblioteca
+JavaScript para construção de interfaces de usuário, escolhida por sua eficiência
+na criação de componentes reutilizáveis e desempenho otimizado. O TypeScript é
+usado para adicionar tipagem estática ao código JavaScript, aumentando a robustez
+e facilitando a manutenção. O Redux é empregado para o gerenciamento de estado da
+aplicação, ideal para aplicações de médio e grande porte que necessitam de um
+controle mais sofisticado do estado. A biblioteca Material-UI é utilizada para
+implementar o design system do Google Material Design, enquanto o Axios serve
+como cliente HTTP para realizar requisições a APIs. Ferramentas como Jest e
+React Testing Library são utilizadas para testes automatizados, garantindo a
 qualidade e a funcionalidade do código.
 
-O fluxo de dados na aplicação é gerenciado pelo Redux, que centraliza o estado da 
-aplicação em um único store. As ações são despachadas a partir dos componentes, 
-que são tratadas pelos `reducers` para atualizar o estado global. Essa abordagem 
-facilita a depuração e o desenvolvimento de novas funcionalidades, uma vez que o 
+O fluxo de dados na aplicação é gerenciado pelo Redux, que centraliza o estado da
+aplicação em um único store. As ações são despachadas a partir dos componentes,
+que são tratadas pelos `reducers` para atualizar o estado global. Essa abordagem
+facilita a depuração e o desenvolvimento de novas funcionalidades, uma vez que o
 estado da aplicação se torna previsível e controlado.
 
 A estilização da aplicação é feita utilizando CSS-in-JS com a biblioteca Material-UI,
- permitindo uma aplicação consistente do design system através dos componentes. 
- A utilização de temas facilita a customização e a manutenção do estilo visual da 
+ permitindo uma aplicação consistente do design system através dos componentes.
+ A utilização de temas facilita a customização e a manutenção do estilo visual da
  aplicação.
 
-Para a integração e entrega contínua (CI/CD), o projeto utiliza ferramentas como 
-o GitHub Actions, configurado para executar testes automatizados e builds a cada 
-commit, garantindo que a aplicação se mantenha estável e pronta para deployment. 
+Para a integração e entrega contínua (CI/CD), o projeto utiliza
+o GitHub Actions, configurado para executar testes automatizados e builds a cada
+commit, garantindo que a aplicação se mantenha estável e pronta para deployment.
 O deploy é realizado em um servidor localizado na UFMG, permitindo uma escalabilidade
  fácil e eficiente.
 
 
-{\bfseries Your document will be returned to you for revision if
-  modifications are discovered.}
+% {\bfseries Your document will be returned to you for revision if
+%   modifications are discovered.}
 
 \section{Funcionalidades}
 
-The ``\verb|webmedia|'' document class requires the use of the
-``Libertine'' typeface family. Your \TeX\ installation should include
-this set of packages. Please do not substitute other typefaces. The
-``\verb|lmodern|'' and ``\verb|ltimes|'' packages should not be used,
-as they will override the built-in typeface families.
+O projeto oferece diversas funcionalidades voltadas para o suporte
+educacional de estudantes com necessidades especiais. A seguir, são
+descritas as principais funcionalidades do sistema, cada uma desempenhando
+ um papel crucial na promoção de um ambiente inclusivo e eficaz para o
+ aprendizado
+
+\subsection{CRUD de Usuários}
+No sistema, os {\bfseries administradores} são responsáveis por gerenciar as
+escolas, visualizando relatórios e detalhes como professores e
+estratégias.
+% \begin{verbatim}
+%   \begin{teaserfigure}
+%     \includegraphics[width=\textwidth]{sampleteaser}
+%     \caption{figure caption}
+%     \Description{figure description}
+%   \end{teaserfigure}
+% \end{verbatim}
+% \begin{figure}[h]
+%   \centering
+%   \includegraphics[width=\linewidth]{sample-franklin}
+%   \caption{DANIELE}
+%   \Description{tENTANDO COLOCAR UMA IMAGEM AQUI.}
+% \end{figure}
+
+
+As {\bfseries escolas}  criam professores, responsáveis e
+desenvolvem o PEI, além de visualizar estratégias e dados dos alunos
+e professores.
+
+Os {\bfseries coordenadores}  acompanham o progresso dos alunos
+e estratégias, visualizando o andamento dos alunos.
+
+Os {\bfseries professores
+regulares}  são os usuários chave, criando e aplicando estratégias, e
+adicionando relatórios de progresso.
+
+Os {\bfseries professores AEE}  auxiliam
+os regulares, visualizando estratégias do PEI e relatórios, e
+participando de fóruns.
+
+Os {\bfseries responsáveis}  adicionam documentos
+necessários e acompanham o desenvolvimento dos alunos, visualizando
+seus dados e relatórios parciais.
+
+
+\subsection{Criação do PEI}
+A funcionalidade de criação do Plano Educacional Individualizado
+(PEI) é uma das mais importantes, permitindo que educadores e 
+coordenadores elaborem planos personalizados para atender às 
+necessidades específicas de cada aluno.
+
+
+\subsection{Estratégias do PEI}
+Dentro do PEI, os educadores podem definir e documentar diversas 
+estratégias pedagógicas adaptadas às necessidades do aluno. Essas 
+estratégias são orientações práticas que guiam os professores na 
+implementação do plano e ajudam a monitorar o progresso do aluno.
+
+\subsection{Relatório sobre Estratégias}
+A funcionalidade de relatórios permite que educadores e coordenadores 
+acompanhem o andamento das estratégias definidas no PEI. 
+Esses relatórios são fundamentais para avaliar o progresso do aluno, 
+identificar áreas que necessitam de ajustes e garantir que as 
+estratégias estão sendo eficazmente implementadas.
+
+\subsection{Fórum de Acompanhamento do Aluno}
+O fórum de acompanhamento do aluno é uma plataforma colaborativa onde 
+professores, coordenadores e outros profissionais podem discutir o 
+progresso do aluno, compartilhar insights e propor ajustes no PEI. 
+Este fórum promove uma abordagem colaborativa e integrada ao 
+acompanhamento educacional.
+
+\subsection{Reutilização de Estratégias}
+O sistema possui um banco de estratégias pedagógicas que podem ser 
+reutilizadas. Educadores podem consultar esse banco para encontrar 
+estratégias que já foram aplicadas com sucesso em situações similares
+, facilitando a implementação de práticas comprovadamente eficazes.
+
+\subsection{Compartilhamento de Recursos}
+Uma funcionalidade vital do PAR Digital é o compartilhamento de 
+recursos, especialmente Tecnologias Assistivas. Esse recurso 
+permite que professores e coordenadores acessem ferramentas e 
+materiais que podem ser utilizados para apoiar o aprendizado 
+dos alunos com necessidades especiais.
+
+\subsection{Perfil do Aluno}
+O sistema mantém um perfil detalhado do aluno, que inclui informações
+ educacionais e fundamentais. Esse perfil permite que educadores e 
+ coordenadores tenham uma visão abrangente das necessidades, 
+ capacidades e progressos do aluno, facilitando a personalização 
+ do ensino e a monitorização do desenvolvimento educacional.
+
+
 
 \section{Licença}
+Software acadêmico, licença de tecnologias livres que está
+ sendo utilizado de forma de cunho social?
 
-The title of your work should use capital letters appropriately -
-\url{https://capitalizemytitle.com/} has useful rules for
-capitalization. Use the {\verb|title|} command to define the title of
-your work. If your work has a subtitle, define it with the
-{\verb|subtitle|} command.  Do not insert line breaks in your title.
-
-If your title is lengthy, you must define a short version to be used
-in the page headers, to prevent overlapping text. The \verb|title|
-command has a ``short title'' parameter:
-\begin{verbatim}
-  \title[short title]{full title}
-\end{verbatim}
 
 \section{Perspectivas}
 
-The title of your work should use capital letters appropriately -
-\url{https://capitalizemytitle.com/} has useful rules for
-capitalization. Use the {\verb|title|} command to define the title of
-your work. If your work has a subtitle, define it with the
-{\verb|subtitle|} command.  Do not insert line breaks in your title.
+\subsection{Perspectiva Acadêmica}
+O PAR Digital representa uma inovação significativa no campo 
+da educação inclusiva, oferecendo uma ferramenta tecnológica 
+poderosa para a gestão eficiente de Plano Educacional 
+Individualizado (PEI). Academicamente, essa ferramenta pode 
+servir como um catalisador para a pesquisa e o 
+desenvolvimento contínuo de estratégias pedagógicas 
+adaptativas. 
 
-If your title is lengthy, you must define a short version to be used
-in the page headers, to prevent overlapping text. The \verb|title|
-command has a ``short title'' parameter:
-\begin{verbatim}
-  \title[short title]{full title}
-\end{verbatim}
+O acesso a dados detalhados sobre o progresso dos alunos, 
+bem como o compartilhamento de estratégias bem-sucedidas 
+entre os educadores, pode promover a produção de conhecimento
+ acadêmico relevante na área da educação inclusiva. 
 
+Além disso, o projeto pode facilitar estudos longitudinais 
+sobre o impacto de intervenções específicas no 
+desenvolvimento educacional de alunos com deficiência, 
+fornecendo insights valiosos para a comunidade acadêmica.
 
-\section{Authors and Affiliations}
+\subsection{Perspectiva Social}
+Socialmente, o PAR Digital tem o potencial de promover a 
+inclusão e a igualdade de oportunidades na educação. Ao 
+oferecer uma plataforma acessível e intuitiva para a 
+gestão de PEIs, o sistema capacita os educadores a 
+oferecer um suporte mais eficaz aos alunos com deficiência, 
+adaptando seus métodos de ensino às necessidades 
+individuais de cada estudante. Isso não apenas melhora 
+a experiência educacional desses alunos, mas também 
+fortalece a coesão social ao reconhecer e valorizar a 
+diversidade no ambiente escolar.
 
-Each author must be defined separately for accurate metadata
-identification. Multiple authors may share one affiliation. Authors'
-names should not be abbreviated; use full first names wherever
-possible. Include authors' e-mail addresses whenever possible.
-
-Grouping authors' names or e-mail addresses, or providing an ``e-mail
-alias,'' as shown below, is not acceptable:
-\begin{verbatim}
-  \author{Brooke Aster, David Mehldau}
-  \email{dave,judy,steve@university.edu}
-  \email{firstname.lastname@phillips.org}
-\end{verbatim}
-
-The \verb|authornote| and \verb|authornotemark| commands allow a note
-to apply to multiple authors --- for example, if the first two authors
-of an article contributed equally to the work.
-
-If your author list is lengthy, you must define a shortened version of
-the list of authors to be used in the page headers, to prevent
-overlapping text. The following command should be placed just after
-the last \verb|\author{}| definition:
-\begin{verbatim}
-  \renewcommand{\shortauthors}{McCartney, et al.}
-\end{verbatim}
-Omitting this command will force the use of a concatenated list of all
-of the authors' names, which may result in overlapping text in the
-page headers.
-
-The article template's documentation, available at
-\url{https://www.acm.org/publications/proceedings-template}, has a
-complete explanation of these commands and tips for their effective
-use.
-
-\section{Sectioning Commands}
-
-Your work should use standard \LaTeX\ sectioning commands:
-\verb|section|, \verb|subsection|, \verb|subsubsection|, and
-\verb|paragraph|. They should be numbered; do not remove the numbering
-from the commands.
-
-Simulating a sectioning command by setting the first word or words of
-a paragraph in boldface or italicized text is {\bfseries not allowed.}
-
-\section{Tables}
-
-The ``\verb|acmart|'' document class includes the ``\verb|booktabs|''
-package --- \url{https://ctan.org/pkg/booktabs} --- for preparing
-high-quality tables.
-
-Table captions are placed {\itshape above} the table.
-
-Because tables cannot be split across pages, the best placement for
-them is typically the top of the page nearest their initial cite.  To
-ensure this proper ``floating'' placement of tables, use the
-environment \textbf{table} to enclose the table's contents and the
-table caption.  The contents of the table itself must go in the
-\textbf{tabular} environment, to be aligned properly in rows and
-columns, with the desired horizontal and vertical rules.  Again,
-detailed instructions on \textbf{tabular} material are found in the
-\textit{\LaTeX\ User's Guide}.
-
-Immediately following this sentence is the point at which
-Table~\ref{tab:freq} is included in the input file; compare the
-placement of the table here with the table in the printed output of
-this document.
-
-\begin{table}
-  \caption{Frequency of Special Characters}
-  \label{tab:freq}
-  \begin{tabular}{ccl}
-    \toprule
-    Non-English or Math&Frequency&Comments\\
-    \midrule
-    \O & 1 in 1,000& For Swedish names\\
-    $\pi$ & 1 in 5& Common in math\\
-    \$ & 4 in 5 & Used in business\\
-    $\Psi^2_1$ & 1 in 40,000& Unexplained usage\\
-  \bottomrule
-\end{tabular}
-\end{table}
-
-To set a wider table, which takes up the whole width of the page's
-live area, use the environment \textbf{table*} to enclose the table's
-contents and the table caption.  As with a single-column table, this
-wide table will ``float'' to a location deemed more
-desirable. Immediately following this sentence is the point at which
-Table~\ref{tab:commands} is included in the input file; again, it is
-instructive to compare the placement of the table here with the table
-in the printed output of this document.
-
-\begin{table*}
-  \caption{Some Typical Commands}
-  \label{tab:commands}
-  \begin{tabular}{ccl}
-    \toprule
-    Command &A Number & Comments\\
-    \midrule
-    \texttt{{\char'134}author} & 100& Author \\
-    \texttt{{\char'134}table}& 300 & For tables\\
-    \texttt{{\char'134}table*}& 400& For wider tables\\
-    \bottomrule
-  \end{tabular}
-\end{table*}
-
-\section{Math Equations}
-You may want to display math equations in three distinct styles:
-inline, numbered or non-numbered display.  Each of the three are
-discussed in the next sections.
-
-\subsection{Inline (In-text) Equations}
-A formula that appears in the running text is called an inline or
-in-text formula.  It is produced by the \textbf{math} environment,
-which can be invoked with the usual
-\texttt{{\char'134}begin\,\ldots{\char'134}end} construction or with
-the short form \texttt{\$\,\ldots\$}. You can use any of the symbols
-and structures, from $\alpha$ to $\omega$, available in
-\LaTeX~\cite{Lamport:LaTeX}; this section will simply show a few
-examples of in-text equations in context. Notice how this equation:
-\begin{math}
-  \lim_{n\rightarrow \infty}x=0
-\end{math},
-set here in in-line math style, looks slightly different when
-set in display style.  (See next section).
-
-\subsection{Display Equations}
-A numbered display equation---one set off by vertical space from the
-text and centered horizontally---is produced by the \textbf{equation}
-environment. An unnumbered display equation is produced by the
-\textbf{displaymath} environment.
-
-Again, in either environment, you can use any of the symbols and
-structures available in \LaTeX\@; this section will just give a couple
-of examples of display equations in context.  First, consider the
-equation, shown as an inline equation above:
-\begin{equation}
-  \lim_{n\rightarrow \infty}x=0
-\end{equation}
-Notice how it is formatted somewhat differently in
-the \textbf{displaymath}
-environment.  Now, we'll enter an unnumbered equation:
-\begin{displaymath}
-  \sum_{i=0}^{\infty} x + 1
-\end{displaymath}
-and follow it with another numbered equation:
-\begin{equation}
-  \sum_{i=0}^{\infty}x_i=\int_{0}^{\pi+2} f
-\end{equation}
-just to demonstrate \LaTeX's able handling of numbering.
-
-\section{Figures}
-
-The ``\verb|figure|'' environment should be used for figures. One or
-more images can be placed within a figure. If your figure contains
-third-party material, you must clearly identify it as such, as shown
-in the example below.
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=\linewidth]{sample-franklin}
-  \caption{1907 Franklin Model D roadster. Photograph by Harris \&
-    Ewing, Inc. [Public domain], via Wikimedia
-    Commons. (\url{https://goo.gl/VLCRBB}).}
-  \Description{The 1907 Franklin Model D roadster.}
-\end{figure}
-
-Your figures should contain a caption which describes the figure to
-the reader. Figure captions go below the figure. Your figures should
-{\bfseries also} include a description suitable for screen readers, to
-assist the visually-challenged to better understand your work.
-
-Figure captions are placed {\itshape below} the figure.
-
-\subsection{The ``Teaser Figure''}
-
-A ``teaser figure'' is an image, or set of images in one figure, that
-are placed after all author and affiliation information, and before
-the body of the article, spanning the page. If you wish to have such a
-figure in your article, place the command immediately before the
-\verb|\maketitle| command:
-\begin{verbatim}
-  \begin{teaserfigure}
-    \includegraphics[width=\textwidth]{sampleteaser}
-    \caption{figure caption}
-    \Description{figure description}
-  \end{teaserfigure}
-\end{verbatim}
-
-\section{Citations and Bibliographies}
-
-The use of \BibTeX\ for the preparation and formatting of one's
-references is strongly recommended. Authors' names should be complete
---- use full first names (``Donald E. Knuth'') not initials
-(``D. E. Knuth'') --- and the salient identifying features of a
-reference should be included: title, year, volume, number, pages,
-article DOI, etc.
-
-The bibliography is included in your source document with these two
-commands, placed just before the \linebreak \verb|\end{document}| command:
-\begin{verbatim}
-  \bibliographystyle{ACM-Reference-Format}
-  \bibliography{bibfile}
-\end{verbatim}
-where ``\verb|bibfile|'' is the name, without the ``\verb|.bib|''
-suffix, of the \BibTeX\ file.
-
-Citations and references are numbered by default. A small number of
-ACM publications have citations and references formatted in the
-``author year'' style; for these exceptions, please include this
-command in the {\bfseries preamble} (before \linebreak
-``\verb|\begin{document}|'') of your \LaTeX\ source:
-\begin{verbatim}
-  \citestyle{acmauthoryear}
-\end{verbatim}
-
-  Some examples.  A paginated journal article \cite{Abril07}, an
-  enumerated journal article \cite{Cohen07}, a reference to an entire
-  issue \cite{JCohen96}, a monograph (whole book) \cite{Kosiur01}, a
-  monograph/whole book in a series (see 2a in spec. document)
-  \cite{Harel79}, a divisible-book such as an anthology or compilation
-  \cite{Editor00} followed by the same example, however we only output
-  the series if the volume number is given \cite{Editor00a} (so
-  Editor00a's series should NOT be present since it has no vol. no.),
-  a chapter in a divisible book \cite{Spector90}, a chapter in a
-  divisible book in a series \cite{Douglass98}, a multi-volume work as
-  book \cite{Knuth97}, an article in a proceedings (of a conference,
-  symposium, workshop for example) (paginated proceedings article)
-  \cite{Andler79}, a proceedings article with all possible elements
-  \cite{Smith10}, an example of an enumerated proceedings article
-  \cite{VanGundy07}, an informally published work \cite{Harel78}, a
-  doctoral dissertation \cite{Clarkson85}, a master's thesis:
-  \cite{anisi03}, an online document / world wide web resource
-  \cite{Thornburg01, Poker06}, a video game (Case 1)
-  \cite{Obama08} and (Case 2) \cite{Novak03} and \cite{Lee05} and
-  (Case 3) a patent \cite{JoeScientist001}, work accepted for
-  publication \cite{rous08}, 'YYYYb'-test for prolific author
-  \cite{SaeediMEJ10} and \cite{SaeediJETC10}. Other cites might
-  contain 'duplicate' DOI and URLs (some SIAM articles)
-  \cite{Kirschmer:2010:AEI:1958016.1958018}. Boris / Barbara Beeton:
-  multi-volume works as books \cite{MR781536} and \cite{MR781537}. A
-  couple of citations with DOIs:
-  \cite{2004:ITE:1009386.1010128,Kirschmer:2010:AEI:1958016.1958018}. Online
-  citations: \cite{TUGInstmem, Thornburg01, CTANacmart}.
-
-\section{Acknowledgments}
-
-Identification of funding sources and other support, and thanks to
-individuals and groups that assisted in the research and the
-preparation of the work should be included in an acknowledgment
-section, which is placed just before the reference section in your
-document.
-
-This section has a special environment:
-\begin{verbatim}
-  \begin{acks}
-  ...
-  \end{acks}
-\end{verbatim}
-so that the information contained therein can be more easily collected
-during the article metadata extraction phase, and to ensure
-consistency in the spelling of the section heading.
-
-Authors should not prepare this section as a numbered or unnumbered {\verb|\section|}; please use the ``{\verb|acks|}'' environment.
+Além disso, ao envolver os pais e responsáveis no processo 
+educacional por meio do acompanhamento do progresso dos 
+alunos, o software promove uma parceria colaborativa entre 
+escola e comunidade, fortalecendo os laços sociais e a 
+confiança na instituição educacional.
 
 \section{Appendices}
 
