--- a/Paper.tex
+++ b/Paper.tex
@@ -33,6 +33,7 @@
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
 \title{PAR Digital: Tecnologia em Prol do Ensino Inclusivo}
+% \title{PAR Digital: Tecnologia em Prol da Educação Inclusiva}
 
 % \subtitle{Subtitle (optional)}
 %%
@@ -160,13 +161,8 @@ descritas as principais funcionalidades do sistema, cada uma desempenhando
 No sistema, os {\bfseries administradores} são responsáveis por gerenciar as
 escolas, visualizando relatórios e detalhes como professores e
 estratégias.
-% \begin{verbatim}
-%   \begin{teaserfigure}
-%     \includegraphics[width=\textwidth]{sampleteaser}
-%     \caption{figure caption}
-%     \Description{figure description}
-%   \end{teaserfigure}
-% \end{verbatim}
+
+\includegraphics[scale=0.12]{./imgs/capa}
 % \begin{figure}[h]
 %   \centering
 %   \includegraphics[width=\linewidth]{sample-franklin}
