--- a/Paper.tex
+++ b/Paper.tex
@@ -54,6 +54,10 @@
 
 \vspace{1cm}
 
+
+
+
+
 %%
 %% By default, the full list of authors will be used in the page
 %% headers. Often, this list is too long, and will overlap
@@ -100,24 +104,27 @@ O PAR Digital é uma ferramenta tecnológica desenvolvida com base em anos de es
 e pesquisa pela Faculdade de Educação da Universidade Federal de Minas Gerais, PAR
 significa Planejar, Aplicar, Rever, ações necessárias para que o ensino seja eficaz
 para os alunos com deficiência.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/capa}
 
 \section{Objetivo}
 O objetivo do PAR Digital é proporcionar uma ferramenta acessível e intuitiva
 que facilite o preenchimento e a gestão do Plano Educacional Individualizado (PEI),
 essencial para o desenvolvimento educacional dos alunos com deficiência. Desenvolvido
- a partir de princípios do Desenho Universal de Aprendizagem (DUA) e de uma parceria
- com o Atendimento Educacional Especializado (AEE), o sistema visa integrar-se de
+a partir de princípios do Desenho Universal de Aprendizagem (DUA) e de uma parceria
+com o Atendimento Educacional Especializado (AEE), o sistema visa integrar-se de
  maneira eficiente na rotina diária dos educadores, promovendo um ensino inclusivo
  e personalizado.
-% \url{https://www.acm.org/publications/proceedings-template}.
-
-\section{Arquitetura}
-
-A estrutura do projeto é organizada de maneira a facilitar 
-a manutenção e a expansão do mesmo.
-
-As principais tecnologias utilizadas no projeto incluem React.js, uma biblioteca
-JavaScript para construção de interfaces de usuário, escolhida por sua eficiência
+ % \url{https://www.acm.org/publications/proceedings-template}.
+ 
+ \section{Arquitetura}
+ 
+ A estrutura do projeto é organizada de maneira a facilitar 
+ a manutenção e a expansão do mesmo.
+ 
+ As principais tecnologias utilizadas no projeto incluem React.js, uma biblioteca
+ JavaScript para construção de interfaces de usuário, escolhida por sua eficiência
 na criação de componentes reutilizáveis e desempenho otimizado. O TypeScript é
 usado para adicionar tipagem estática ao código JavaScript, aumentando a robustez
 e facilitando a manutenção. O Redux é empregado para o gerenciamento de estado da
@@ -145,30 +152,22 @@ commit, garantindo que a aplicação se mantenha estável e pronta para deployme
 O deploy é realizado em um servidor localizado na UFMG, permitindo uma escalabilidade
  fácil e eficiente.
 
-
-% {\bfseries Your document will be returned to you for revision if
-%   modifications are discovered.}
-
 \section{Funcionalidades}
 
 O projeto oferece diversas funcionalidades voltadas para o suporte
 educacional de estudantes com necessidades especiais. A seguir, são
 descritas as principais funcionalidades do sistema, cada uma desempenhando
  um papel crucial na promoção de um ambiente inclusivo e eficaz para o
- aprendizado
+ aprendizado.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/painel}
 
 \subsection{CRUD de Usuários}
 No sistema, os {\bfseries administradores} são responsáveis por gerenciar as
 escolas, visualizando relatórios e detalhes como professores e
 estratégias.
 
-\includegraphics[scale=0.12]{./imgs/capa}
-% \begin{figure}[h]
-%   \centering
-%   \includegraphics[width=\linewidth]{sample-franklin}
-%   \caption{DANIELE}
-%   \Description{tENTANDO COLOCAR UMA IMAGEM AQUI.}
-% \end{figure}
 
 
 As {\bfseries escolas}  criam professores, responsáveis e
@@ -196,6 +195,9 @@ A funcionalidade de criação do Plano Educacional Individualizado
 (PEI) é uma das mais importantes, permitindo que educadores e 
 coordenadores elaborem planos personalizados para atender às 
 necessidades específicas de cada aluno.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/pei}
 
 
 \subsection{Estratégias do PEI}
@@ -203,6 +205,9 @@ Dentro do PEI, os educadores podem definir e documentar diversas
 estratégias pedagógicas adaptadas às necessidades do aluno. Essas 
 estratégias são orientações práticas que guiam os professores na 
 implementação do plano e ajudam a monitorar o progresso do aluno.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/estrategia}
 
 \subsection{Relatório sobre Estratégias}
 A funcionalidade de relatórios permite que educadores e coordenadores 
@@ -210,6 +215,10 @@ acompanhem o andamento das estratégias definidas no PEI.
 Esses relatórios são fundamentais para avaliar o progresso do aluno, 
 identificar áreas que necessitam de ajustes e garantir que as 
 estratégias estão sendo eficazmente implementadas.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/relatorio}
+
 
 \subsection{Fórum de Acompanhamento do Aluno}
 O fórum de acompanhamento do aluno é uma plataforma colaborativa onde 
@@ -217,12 +226,18 @@ professores, coordenadores e outros profissionais podem discutir o
 progresso do aluno, compartilhar insights e propor ajustes no PEI. 
 Este fórum promove uma abordagem colaborativa e integrada ao 
 acompanhamento educacional.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/forum}
 
 \subsection{Reutilização de Estratégias}
 O sistema possui um banco de estratégias pedagógicas que podem ser 
 reutilizadas. Educadores podem consultar esse banco para encontrar 
 estratégias que já foram aplicadas com sucesso em situações similares
 , facilitando a implementação de práticas comprovadamente eficazes.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/banco}
 
 \subsection{Compartilhamento de Recursos}
 Uma funcionalidade vital do PAR Digital é o compartilhamento de 
@@ -230,6 +245,9 @@ recursos, especialmente Tecnologias Assistivas. Esse recurso
 permite que professores e coordenadores acessem ferramentas e 
 materiais que podem ser utilizados para apoiar o aprendizado 
 dos alunos com necessidades especiais.
+\vspace{0.5cm}
+
+\includegraphics[scale=0.12]{./imgs/materialAdd}
 
 \subsection{Perfil do Aluno}
 O sistema mantém um perfil detalhado do aluno, que inclui informações
@@ -237,8 +255,9 @@ O sistema mantém um perfil detalhado do aluno, que inclui informações
  coordenadores tenham uma visão abrangente das necessidades, 
  capacidades e progressos do aluno, facilitando a personalização 
  do ensino e a monitorização do desenvolvimento educacional.
+ \vspace{0.5cm}
 
-
+\includegraphics[scale=0.12]{./imgs/perfil}
 
 \section{Licença}
 Software acadêmico, licença de tecnologias livres que está
@@ -283,6 +302,7 @@ educacional por meio do acompanhamento do progresso dos
 alunos, o software promove uma parceria colaborativa entre 
 escola e comunidade, fortalecendo os laços sociais e a 
 confiança na instituição educacional.
+
 
 \section{Appendices}
 
